# tio4317-time-series-project

./: README.md  first_tests.ipynb  get_data.ipynb  main.ipynb  periods.ipynb  pyproject.toml  report.ipynb  test.ipynb  tio4317_project_src.py
data/: A.csv  AAPL.csv  ABBV.csv  ABNB.csv  ABT.csv  ACGL.csv  ACN.csv  ADBE.csv  ADI.csv  ADM.csv  ADP.csv  ADSK.csv  AEE.csv  AEP.csv  AES.csv  AFL.csv  AIG.csv  AIZ.csv  AJG.csv  AKAM.csv  ALB.csv  ALGN.csv  ALL.csv  ALLE.csv  AMAT.csv  AMCR.csv  AMD.csv  AME.csv  AMGN.csv  AMP.csv  AMT.csv  AMZN.csv  ANET.csv  ANSS.csv  AON.csv  AOS.csv  APA.csv  APD.csv  APH.csv  APO.csv  (+461 more)
